[package]
name = "vplot"
version = "0.1.0"
authors = ["snystrom <snystrom@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = {version = "*", default-features = false}
bio = "*"
structopt = "*"
