[package]
name = "vplot"
version = "0.1.0"
authors = ["snystrom <snystrom@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "*"
bio = "*"
rust-htslib = {version = "*", default-features = false}
structopt = "*"
ndarray = "0.13.1"
ndarray-csv = "*"
